<resources>
    <string name="app_name">SprotAppUI</string>
    <string name="activity_main_title">运动</string>
    <string name="whole_distance">总距离/kｍ</string>
    <string name="day_distance">里程/ｋｍ</string>
    <string name="whole_spent_time">总时长/ｈ</string>
    <string name="whole_consume">总消耗/ｋ</string>
    <string name="logout">登出</string>
    <string name="chooses_rate">排行</string>
    <string name="chooses_person_history">个人记录</string>
    <string name="chooses_my_sport_team">我的运动团</string>
    <string name="chooses_setting">设置</string>
    <string name="toolbar_name_sport">运动</string>
    <string name="toolbar_name_sport_circle">运动圈</string>
    <string name="toolbar_name_contacts">消息</string>
    <string name="toolbar_name_my">我的</string>
    <string name="day_rate">今日排行</string>
    <string name="user_score">成绩</string>
    <string name="user_sport_team">我的运动团</string>
    <string name="create_sport">创建</string>
    <string name="create_activity">创建活动</string>
    <string name="next">下一步</string>
    <string name="finish">完成</string>
    <string name="msg_setting">消息通知</string>
    <string name="activity_name">活动名称</string>
    <string name="time">起止时间</string>
    <string name="joiner_limit">参与人数上限</string>
    <string name="details">详情</string>
    <string name="share_activity">分享</string>
    <string name="user_setting">设置</string>
    <string name="score_walk">健走</string>
    <string name="score_max_run_dis">最远跑步距离</string>
    <string name="no_data_tip">还没有任何数据呢</string>
    <string name="location">活动地点</string>
    <string name="title_activity_msg_setting">Settings</string>
    <string name="authority_setting">权限设置</string>
    <string name="sport_circle_setting">运动圈推送</string>
    <string name="sounds">声音</string>
    <string name="vibrate">震动</string>
    <string name="camera">相机</string>
    <string name="storage">存储</string>
    <string name="position">定位</string>
    <string name="sportStatus">运动状态</string>
    <string name="hisSport">参与活动</string>
    <string name="reason">延期原因</string>

    <string name="joiner">参加人员</string>
    <string name="user_info">个人信息</string>
    <string name="user_sign">个性签名</string>
    <string name="user_sign_hint">个性签名可以让别人更了解你哦</string>
    <!--百度地图相关字符串-->
    <string name="TraceRecord_title_name">跑步中</string>
    <string name="pause">暂停</string>
    <string name="go_on">继续</string>
    <string name="go_on_record">继续运动</string>
    <string name="end_record">结束运动</string>
    <string name="long_press_to_stop">长按结束</string>
    <string name="api_fail">apikey验证失败，地图功能无法正常使用</string>
    <string name="api_success">apikey验证成功</string>
    <string name="network_fail">网络错误</string>
    <string name="unlock_success">解锁成功！</string>
    <string name="GPS_searching">GPS信号搜索中，请稍后...</string>
    <string name="GPS_weak">GPS信号搜索中，请稍后...</string>
    <string name="GPS_connecting">GPS信号连接中，请稍后...</string>
    <string name="record_nothing">是否结束运动？</string>
    <string name="open_GPS">请打开GPS</string>
    <string name="open_GPSc">请打开GPS连接</string>
    <string name="set">设置</string>
    <string name="GPS_content">打开后直接点击返回键即可，若不打开返回下次将再次出现</string>
    <string name="cancel">取消</string>
    <string name="GPS_opened">GPS已开启</string>
    <string name="network_set">网络设置提示</string>
    <string name="network_disabled">网络连接不可用,是否进行设置?</string>
    <string name="distanceM">距离(米)</string>
    <string name="spend_time">用时(时/分/秒)</string>
    <string name="speed">时速(公里/小时)</string>
    <string name="slide_to_unlockScreen">向右滑动解锁</string>
    <string name="distanceKM">距离(公里)</string>
    <string name="lockScreen">锁屏</string>
    <string name="step">步数</string>
    <string name="cancelActivity">确定取消活动吗？</string>
    <string name="askReason">请输入原因</string>
    <string name="join">参与活动</string>
    <string name="alreadyJoin">已参加</string>
    <string name="publisher">发起人</string>

</resources>

