<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_authority_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ccc.tcl.com.sprotappui.activity.AuthoritySettingActivity"
    android:orientation="vertical"
    android:background="@color/grey_background">
    <include layout="@layout/toolbar_general"></include>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:background="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="2px"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/storage"
        android:background="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="2px"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/position"
        android:background="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="2px"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vibrate"
        android:background="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="2px"/>
</LinearLayout>
