<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="10dp"
    android:paddingRight="12dp"
    android:paddingTop="10dp"
    android:orientation="vertical"
    tools:context="ccc.tcl.com.sprotappui.activity.CreateActivity"
    android:weightSum="1">
    <include layout="@layout/toolbar_general"></include>
    <TextView
        android:text="@string/activity_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginStart="7dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:inputType="textPersonName"
        android:textCursorDrawable="@drawable/cursor_theme"
        android:hint="10字以内" />
    <TextView
        android:id="@+id/name_text_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textAlignment="viewEnd"
        android:text="0/10"/>
    <TextView
        android:text="@string/joiner_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="7dp"
        android:textCursorDrawable="@drawable/cursor_theme" />


    <EditText
        android:id="@+id/joiner_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:inputType="number"
        android:textCursorDrawable="@drawable/cursor_theme"
        android:gravity="start"
        android:hint="1000以内"
        android:layout_weight="0.17" />

    <TextView
        android:text="@string/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="7dp" />

    <EditText
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:textCursorDrawable="@drawable/cursor_theme"
        android:hint="40字以内"
        android:layout_weight="0.27" />
    <TextView
        android:id="@+id/details_text_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:text="0/40"/>
</LinearLayout>
