<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.HomeActivity"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:background="@mipmap/activity"
        android:fitsSystemWindows="true">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_photo"
            android:src="@drawable/photo1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/page_content_margin_top" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_photo"
            android:layout_marginTop="@dimen/title_content_margin"
            android:text="小狐丸"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/activity_content_size_big"
            android:layout_centerHorizontal="true" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_marginTop="116dp">
            <TextView
                android:id="@+id/whole_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="@dimen/activity_content_size_mid"
                android:text="56241"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_content_margin"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/dimgrey"
                android:text="@string/whole_distance"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_marginTop="116dp">
            <TextView
                android:id="@+id/whole_spent_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="@dimen/activity_content_size_mid"
                android:text="78"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_content_margin"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/dimgrey"
                android:text="@string/whole_spent_time"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/page_content_margin_left"
            android:orientation="vertical"
            android:layout_marginTop="116dp">
            <TextView
                android:id="@+id/whole_consume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="@dimen/activity_content_size_mid"
                android:text="65122"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_content_margin"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/dimgrey"
                android:text="@string/whole_consume"/>
        </LinearLayout>
    </RelativeLayout>

    <com.dl7.tag.TagView
        android:id="@+id/user_logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentBottom="true"
        app:tag_text="@string/logout"
        app:tag_text_color="@color/red"
        app:tag_border_color="@color/red"
        app:tag_shape="arc"
        app:tag_vertical_padding="@dimen/button_padding_top"
        app:tag_horizontal_padding="@dimen/button_padding_left"
        app:tag_press_feedback="true"
        android:layout_centerHorizontal="true"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/choose_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@+id/relative">
    </android.support.v7.widget.RecyclerView>

</RelativeLayout>
